Update flask application

--- a/routes.ipynb
+++ b/routes.ipynb
@@ -230,7 +230,7 @@
    "source": [
     "app = Flask(__name__)\n",
     "CORS(app)\n",
-    "app.es_client = Elasticsearch(\"https://localhost:9200\", basic_auth=(\"elastic\", \"2C2POmj1a75XqoUOs1-h\"), ca_certs=\"~/http_ca.crt\")\n",
+    "app.es_client = Elasticsearch(\"https://localhost:9200\", basic_auth=(\"elastic\", \"sercret_elastic_search\"), ca_certs=\"~/http_ca.crt\")\n",
     "app.df = pd.read_parquet('recipes_parq.parquet')\n",
     "\n",
     "# @app.route('/recipes', methods=['GET'])\n",
